# llm-inference-optimization

./: .gitignore  README.md  benchmark.py  optimization_experiment.ipynb  pyproject.toml
benchmark_results/: llava_benchmark_results.csv  llava_summary_statistics.csv  qwen_benchmark_results.csv  qwen_summary_statistics.csv
llamacpp_scripts/: start_llava_baseline.sh  start_llava_optimize_A.sh  start_llava_optimize_B.sh  start_llava_optimize_C.sh  start_llava_optimize_Y.sh  start_llava_optimize_Z.sh  start_qwen_baseline.sh  start_qwen_optimize_A.sh  test_gpu_offloading.sh
raw_docs/: Contradictory_NDA_No_Highlight.docx
