[project]
name = "llm-inference-optimization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "docx2pdf>=0.1.8",
    "jupyterlab>=4.4.6",
    "matplotlib>=3.10.5",
    "openai>=1.102.0",
    "pandas>=2.3.2",
    "pdf2image>=1.17.0",
    "pillow>=11.3.0",
    "pymupdf>=1.26.4",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
]
